<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="General" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PersianDigits"
            android:summary="@string/enable_persian_digits"
            android:title="@string/persian_digits" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Gadget" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="GadgetClock"
            android:summary="@string/showing_clock_on_widget"
            android:title="@string/clock_on_widget" />
  <!--   <CheckBoxPreference
            android:defaultValue="true"
            android:key="TransparentWidget"
            android:summary="@string/transparent_background_on_widgets"
            android:title="@string/transparent_widget" /> -->
    </PreferenceCategory>

</PreferenceScreen>